[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-ml"
version = "0.0.1"
description = "An ML/heuristic risk advisor that plugs into decide(action, advisor=...). Advisory ONLY — it can suggest 'malicious' but the kernel decides."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Ali Pourrahim" }]
dependencies = ["decision-os-min", "cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools]
packages = ["dos_plugin_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
